# Vininator-3000

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT.md  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/skills/terroir-features/: SKILL.md
.claude/skills/terroir-features/references/: era5_recipes.md  leakage_rules.md  provider_blueprint.md  soilgrids_recipes.md
.claude/skills/vinilogy/: SKILL.md
.claude/skills/vinilogy/references/: faults_and_outliers.md  grape_varieties.md  regions_and_styles.md  tasting_vocabulary.md  vintage_and_quality.md
notebooks/: 01_eda.ipynb
scripts/: age_summary.py  eda_summary.py  fill_summary.py  list_cells.py  profile_summary.py  region_coverage.py  verify_summary.py
src/vininator/: __init__.py  cli.py  config.py
src/vininator/data/: __init__.py  geocode.py  load.py
src/vininator/features/: __init__.py  build.py  climate.py  soil.py  terroir.py  text.py
tests/: conftest.py  test_config.py  test_load.py
tests/data/: open_elevation_tuscany.json  soilgrids_tuscany.json
tests/features/: test_build.py  test_build_perf.py  test_climate.py  test_geocode.py  test_soil.py  test_terroir.py  test_text.py
