[project]
name = "vininator"
version = "0.1.0"
description = "Wine rating and tasting-notes predictor combining WineSensed reviews with ERA5 climate and SoilGrids terroir features."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

dependencies = [
    "polars>=1.12",
    "typer>=0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "geopy>=2.4",
    "requests>=2.32",
]

[project.scripts]
vininator = "vininator.cli:app"

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.2",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vininator"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".claude", "notebooks", "data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TID", # tidy imports
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B018"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
